fixed alignment issue

--- a/src/components/navigation-bar/index.css
+++ b/src/components/navigation-bar/index.css
@@ -34,7 +34,6 @@
 
 .nameAndLogoutContainer{
   margin-left: 1em;
-  margin-right: 1em;
 }
 
 .logoutLink{
